--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </div>
             </section>
             <section class="slanted img img-right">
-                <img src="pics/cars/in-progress-1.jpg" alt="Trion Team">
+                <img src="pics/cars/triongraysupercars.jpg" alt="Trion Team">
                 <div class="text-wrapper col">
                     <h3><span>CUSTOMER </span><span>CENTERED </span><span>DESIGN</span></h3>
                     <p>Innovating Electric Transportation
