--- a/our-story.html
+++ b/our-story.html
@@ -72,7 +72,7 @@
                 <div class="first-4">
                 <div class="card-container">
                     <div class="card">
-                        <img src="pics/people/Brent.webp" alt="photo">
+                        <img src="pics/people/Brent.webp" alt="photo" height="450px" width="450px">
                         <p>Chief Operating Officer</p>
                         <br>
                         <p>Brent Johnson</p>
@@ -80,7 +80,7 @@
                 </div>
                 <div class="card-container">
                     <div class="card">
-                        <img src="pics/people/Nancy.webp" alt="photo">
+                        <img src="pics/people/Nancy.webp" alt="photo" height="450px" width="450px">
                         <p>CEA - Chief Executive Assistant</p>
                         <br>
                         <p>Nancy Patterson</p>
@@ -88,7 +88,7 @@
                 </div>
                 <div class="card-container">
                     <div class="card">
-                        <img src="pics/people/Quinton.webp" alt="photo">
+                        <img src="pics/people/Quinton.webp" alt="photo" height="450px" width="450px">
                         <p>VP of Special Vehicle Operations</p>
                         <br>
                         <p>Quinton Dodson</p>
@@ -96,7 +96,7 @@
                 </div>
                 <div class="card-container">
                     <div class="card">
-                        <img src="pics/people/Kie.avif" alt="photo">
+                        <img src="pics/people/Kie.avif" alt="photo" height="450px" width="450px">
                         <p>VP of Sales / Dealer Coordination</p>
                         <br>
                         <p>Kie Fair</p>
@@ -106,7 +106,7 @@
                 <div class="first-4">
                 <div class="card-container">
                     <div class="card">
-                        <img src="pics/people/Romeo.webp" alt="photo">
+                        <img src="pics/people/Romeo.webp" alt="photo" height="450px" width="450px">
                         <p>Chief Brand Ambassador</p>
                         <br>
                         <p>Romeo Miller</p>
@@ -114,7 +114,7 @@
                 </div>
                 <div class="card-container">
                     <div class="card">
-                        <img src="pics/people/Warren.avif" alt="photo">
+                        <img src="pics/people/Warren.avif" alt="photo" height="450px" width="450px">
                         <p>Director of Special Programs</p>
                         <br>
                         <p>Warren Hollier</p>
@@ -122,7 +122,7 @@
                 </div>
                 <div class="card-container">
                     <div class="card">
-                        <img src="pics/people/Peter.avif" alt="photo">
+                        <img src="pics/people/Peter.avif" alt="photo" height="450px" width="450px">
                         <p>CCO, Compliance Officer</p>
                         <br>
                         <p>Peter Dwars</p>
@@ -130,7 +130,7 @@
                 </div>
                 <div class="card-container">
                     <div class="card">
-                        <img src="pics/people/DeMarcus.webp" alt="photo">
+                        <img src="pics/people/DeMarcus.webp" alt="photo" height="450px" width="450px">
                         <p>VP of Business Development</p>
                         <br>
                         <p>DeMarcus Nelson</p>
