--- a/customize.html
+++ b/customize.html
@@ -20,25 +20,25 @@
             </div>
             <form class="color-select">
                 <label for="exterior-color-1"></label>
-                <input type="radio" name=exterior-color id="exterior-color-1" value="custom-color-1">
+                <input type="radio" name=exterior-color id="exterior-color-1" value="custom-color-1" hidden>
                 <label for="exterior-color-2"></label>
-                <input type="radio" name=exterior-color id="exterior-color-2" value="custom-color-2">
+                <input type="radio" name=exterior-color id="exterior-color-2" value="custom-color-2" hidden>
                 <label for="exterior-color-3"></label>
-                <input type="radio" name=exterior-color id="exterior-color-3" value="custom-color-3">
+                <input type="radio" name=exterior-color id="exterior-color-3" value="custom-color-3" hidden>
                 <label for="exterior-color-4"></label>
-                <input type="radio" name=exterior-color id="exterior-color-4" value="custom-color-4">
+                <input type="radio" name=exterior-color id="exterior-color-4" value="custom-color-4" hidden>
                 <label for="exterior-color-5"></label>
-                <input type="radio" name=exterior-color id="exterior-color-5" value="custom-color-5">
+                <input type="radio" name=exterior-color id="exterior-color-5" value="custom-color-5" hidden>
                 <label for="exterior-color-6"></label>
-                <input type="radio" name=exterior-color id="exterior-color-6" value="custom-color-6">
+                <input type="radio" name=exterior-color id="exterior-color-6" value="custom-color-6" hidden>
                 <label for="exterior-color-7"></label>
-                <input type="radio" name=exterior-color id="exterior-color-7" value="custom-color-7">
+                <input type="radio" name=exterior-color id="exterior-color-7" value="custom-color-7" hidden>
                 <label for="exterior-color-8"></label>
-                <input type="radio" name=exterior-color id="exterior-color-8" value="custom-color-8">
+                <input type="radio" name=exterior-color id="exterior-color-8" value="custom-color-8" hidden>
                 <label for="exterior-color-9"></label>
-                <input type="radio" name=exterior-color id="exterior-color-9" value="custom-color-9">
+                <input type="radio" name=exterior-color id="exterior-color-9" value="custom-color-9" hidden>
                 <label for="exterior-color-10"></label>
-                <input type="radio" name=exterior-color id="exterior-color-10" value="custom-color-10">
+                <input type="radio" name=exterior-color id="exterior-color-10" value="custom-color-10" hidden>
             </form>
         </main>
         <footer>
