Settings > garage started

--- a/account.html
+++ b/account.html
@@ -6,7 +6,7 @@
         <title>Account | TRION</title>
         <link rel="icon" type="image/x-icon" href="pics/icons/trion-logo.png">
     </head>
-    <body>
+    <body id="settings">
         <header>
             <nav class="row">
                 <a class="navlogo img" href="index.html" aria-label="company logo"><h1>TRION</h1></a>
@@ -51,8 +51,33 @@
                 </div>
             </nav>
         </header>
-        <main>
+        <main class="row">
+            <nav class="settings-nav">
+                <ul>
+                    <li><a href="#">ACCOUNT SETTINGS</a></li>
+                    <li><a href="#" class="active">MY GARAGE</a></li>
+                    <li><a href="#">ORDER HISTORY</a></li>
+                </ul>
+            </nav>
+            <div class="settings-content">
+                <section>
 
+                </section>
+                <section id="garage">
+                    <article class="custom-car">
+                        <div class="customization-exterior-car">
+                            <img src="pics/cars/7_25-Lux-Black-Nemesis_side-crop.png">
+                        </div>
+                        <div class="row justify-around">
+                            <a href="customize.html" class="button">CUSTOMIZE</a>
+                            <a href="contact-us.html" class="button">ORDER</a>
+                        </div>
+                    </article>
+                </section>
+                <section>
+                    
+                </section>
+            </div>
         </main>
         <footer>
             <div>
