Fixed right slant section

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
         </section>
         <main>
-            <section class="full img col  shadow-top-bottom">
+            <section class="full col  shadow-top-bottom">
                 <div class="text-wrapper shaded">
                     <h3><span>OUR VISION </span><span>& FUTURE</span></h3>
                     <p>Trion Supercars envisions a future where cutting-edge electric technology meets unrivaled performance, pushing the boundaries of speed, sustainability, and innovation. Their mission is to revolutionize the automotive industry by creating all-electric supercars that offer world-class performance while maintaining a commitment to environmental responsibility.</p>
@@ -89,7 +89,7 @@
                     <p>Trion Supercars designs its vehicles with a focus on aligning each model with user preferences and real-world needs. From the initial concept to the final testing stages, the company integrates insights that shape design choices, technological features, and performance capabilities.</p>
                 </div>
             </section>
-            <section class="slanted img img-right">
+            <section class="slanted img-right">
                 <img src="pics/cars/triongraysupercars.jpg" alt="Trion Team">
                 <div class="text-wrapper col">
                     <h3><span>CUSTOMER </span><span>CENTERED </span><span>DESIGN</span></h3>
