Fixed burger menu overlay

--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
             </div>
         </section>
         <main>
-            <section class="full col  shadow-top-bottom">
+            <section class="full col img shadow-top-bottom">
                 <div class="text-wrapper shaded">
                     <h3><span>OUR VISION </span><span>& FUTURE</span></h3>
                     <p>Trion Supercars envisions a future where cutting-edge electric technology meets unrivaled performance, pushing the boundaries of speed, sustainability, and innovation. Their mission is to revolutionize the automotive industry by creating all-electric supercars that offer world-class performance while maintaining a commitment to environmental responsibility.</p>
                 </div>
             </section>
-            <section class="slanted img">
+            <section class="slanted">
                 <img src="pics/people/team-1.avif" alt="Trion Team">
                 <div class="text-wrapper col">
                     <h3><span>OUR TEAM, </span><span>YOUR FUTURE</span></h3>
