--- a/customize.html
+++ b/customize.html
@@ -6,42 +6,125 @@
         <title>Document</title>
     </head>
     <body id="customize">
-        <header class="row">
-            <a class="x-icon" href="index.html" title="x"></a>
-            <a href="account.html" class="save">SAVE</a>
-            <div class="logo-title col">
-                <a class="img" href="index.html" aria-label="company logo"></a>
-                <h1>TRION</h1> 
-            </div>
-        </header>
-        <main>
-            <div class="customization-exterior-car">
-                <img src="pics/cars/7_25-Lux-Black-Nemesis_side-crop.png">
-            </div>
-            <form class="color-select">
-                <label for="exterior-color-1"></label>
-                <input type="radio" name=exterior-color id="exterior-color-1" value="custom-color-1" hidden>
-                <label for="exterior-color-2"></label>
-                <input type="radio" name=exterior-color id="exterior-color-2" value="custom-color-2" hidden>
-                <label for="exterior-color-3"></label>
-                <input type="radio" name=exterior-color id="exterior-color-3" value="custom-color-3" hidden>
-                <label for="exterior-color-4"></label>
-                <input type="radio" name=exterior-color id="exterior-color-4" value="custom-color-4" hidden>
-                <label for="exterior-color-5"></label>
-                <input type="radio" name=exterior-color id="exterior-color-5" value="custom-color-5" hidden>
-                <label for="exterior-color-6"></label>
-                <input type="radio" name=exterior-color id="exterior-color-6" value="custom-color-6" hidden>
-                <label for="exterior-color-7"></label>
-                <input type="radio" name=exterior-color id="exterior-color-7" value="custom-color-7" hidden>
-                <label for="exterior-color-8"></label>
-                <input type="radio" name=exterior-color id="exterior-color-8" value="custom-color-8" hidden>
-                <label for="exterior-color-9"></label>
-                <input type="radio" name=exterior-color id="exterior-color-9" value="custom-color-9" hidden>
-                <label for="exterior-color-10"></label>
-                <input type="radio" name=exterior-color id="exterior-color-10" value="custom-color-10" hidden>
-            </form>
-        </main>
+        <div class="page-wrapper">
+            <header class="row">
+                <a class="x-icon" href="index.html" title="x"></a>
+                <div class="logo-title col">
+                    <a class="img" href="index.html" aria-label="company logo"></a>
+                    <h1>TRION</h1> 
+                </div>
+                <a href="account.html" class="save">SAVE</a>
+            </header>
+            <main>
+                <div class="customization-exterior-car">
+                    <img src="pics/cars/7_25-Lux-Black-Nemesis_side-crop.png">
+                </div>
+                <section class="customization-nav col">
+                    <nav class="customizor-type row">
+                        <button type="button" class="img button-left"></button>
+                        <h2 value="exterior-color">EXTERIOR</h2>
+                        <button type="button" class="img button-right"></button>
+                    </nav>
+                    <nav class="customizor-nav-secondary row">
+                        <button type="button" class="img button-left"></button>
+                        <ul class="row">
+                            <li><button type="button" class="tab">ALL</button></li>
+                            <li><button type="button" class="tab">SOLID</button></li>
+                            <li><button type="button" class="tab">METALLIC</button></li>
+                            <li><button type="button" class="tab">SPECIAL</button></li>
+                            <li><button type="button" class="tab">HISTORICAL</button></li>
+                        </ul>
+                        <button type="button" class="img button-right"></button>
+                    </nav>
+                    <form class="color-select">
+                        <button type="button" class="img button-left"></button>
+                        <div class="content">
+                            <label for="exterior-color-1"></label>
+                            <input type="radio" name=exterior-color id="exterior-color-1" value="custom-color-1" hidden>
+                            <label for="exterior-color-2"></label>
+                            <input type="radio" name=exterior-color id="exterior-color-2" value="custom-color-2" hidden>
+                            <label for="exterior-color-3"></label>
+                            <input type="radio" name=exterior-color id="exterior-color-3" value="custom-color-3" hidden>
+                            <label for="exterior-color-4"></label>
+                            <input type="radio" name=exterior-color id="exterior-color-4" value="custom-color-4" hidden>
+                            <label for="exterior-color-5"></label>
+                            <input type="radio" name=exterior-color id="exterior-color-5" value="custom-color-5" hidden>
+                            <label for="exterior-color-6"></label>
+                            <input type="radio" name=exterior-color id="exterior-color-6" value="custom-color-6" hidden>
+                            <label for="exterior-color-7"></label>
+                            <input type="radio" name=exterior-color id="exterior-color-7" value="custom-color-7" hidden>
+                            <label for="exterior-color-8"></label>
+                            <input type="radio" name=exterior-color id="exterior-color-8" value="custom-color-8" hidden>
+                            <label for="exterior-color-9"></label>
+                            <input type="radio" name=exterior-color id="exterior-color-9" value="custom-color-9" hidden>
+                            <label for="exterior-color-10"></label>
+                            <input type="radio" name=exterior-color id="exterior-color-10" value="custom-color-10" hidden>
+                        </div>
+                        <button type="button" class="img button-right"></button>
+                    </form>
+                </section>
+            </main>
+        </div>
         <footer>
+            <div>
+                <li><a id="to-top" href="#">BACK TO TOP</a></li>
+            </div>
+            <div id="footer-main" class="row wrap">
+                <nav class="footer-nav">
+                    <ul class="col">
+                        <li><a href="account.html">ACCOUNT</a></li>
+                        <li><a href="#">MODELS</a></li>
+                        <li><a href="customize.html">CUSTOMIZATION</a></li>
+                        <li><a href="#">ABOUT US</a></li>
+                        <li><a href="press.html">PRESS</a></li>
+                        <li><a href="contact-us.html">CONTACT US</a></li>
+                        <li><a href="shop.html">STORE</a></li>
+                    </ul>
+                </nav>
+                <section id="footer-contact">
+                    <h3>CONTACT US</h3>
+                    <form class="row wrap">
+                        <div>
+                            <label for="f-name">FIRST NAME</label>
+                            <input type="text" id="f-name" placeholder="FIRST NAME">
+                        </div>
+                        <div>
+                            <label for="l-name">LAST NAME</label>
+                            <input type="text" id="l-name" placeholder="LAST NAME">
+                        </div>
+                        <div>
+                            <label for="email">EMAIL*</label>
+                            <input type="text" id="email" placeholder="EMAIL" required>
+                        </div>
+                        <div>
+                            <label for="phone">PHONE</label>
+                            <input type="text" id="phone" placeholder="PHONE">
+                        </div>
+                        <div>
+                            <label for="message">MESSAGE*</label>
+                            <textarea id="message" placeholder="MESSAGE" required></textarea>
+                        </div>
+                        <button type="submit" class="button">SUBMIT</button>
+                    </form>
+                </section>
+            </div>
+            <ul class="row connections">
+                <li><a href=""><img src="pics/icons/facebook-icon.svg" alt="facebook"></a></li>
+                <li><a href=""><img src="pics/icons/instagram-icon.svg" alt="instagram"></a></li>
+                <li><a href=""><img src="pics/icons/linkedin-icon.svg" alt="linkedin"></a></li>
+                <li><a href=""><img src="pics/icons/youtube-icon.svg" alt="youtube"></a></li>
+                <li><a href=""><img src="pics/icons/tiktok-icon.svg" alt="tiktok"></a></li>
+                <li><a href=""><img src="pics/icons/x-icon.svg" alt="x"></a></li>
+                <li><a href=""><img src="pics/icons/twitch-icon.svg" alt="twitch"></a></li>
+            </ul>
+            <hr>
+                <div class="col" id="footer-foot">
+                    <ul class="row">
+                        <li><a href="">Privacy</a></li>
+                        <li><a href="">Terms</a></li>
+                    </ul>
+                    <p>© 2024-2025, Trion Supercars</p>
+                </div>
         </footer>
     </div>
     <script src="script.js"></script>
