--- a/customize.html
+++ b/customize.html
@@ -26,18 +26,18 @@
                         <button type="button" class="img button-right"></button>
                     </nav>
                     <nav class="customizor-nav-secondary row">
-                        <button type="button" class="img button-left"></button>
-                        <ul class="row">
+                        <button type="button" class="img button-left scroll-arrow hidden"></button>
+                        <ul class="row content">
                             <li><button type="button" class="tab">ALL</button></li>
                             <li><button type="button" class="tab">SOLID</button></li>
                             <li><button type="button" class="tab">METALLIC</button></li>
                             <li><button type="button" class="tab">SPECIAL</button></li>
                             <li><button type="button" class="tab">HISTORICAL</button></li>
                         </ul>
-                        <button type="button" class="img button-right"></button>
+                        <button type="button" class="img button-right scroll-arrow hidden"></button>
                     </nav>
                     <form class="color-select">
-                        <button type="button" class="img button-left"></button>
+                        <button type="button" class="img button-left scroll-arrow hidden"></button>
                         <div class="content">
                             <label for="exterior-color-1"></label>
                             <input type="radio" name=exterior-color id="exterior-color-1" value="custom-color-1" hidden>
@@ -60,7 +60,7 @@
                             <label for="exterior-color-10"></label>
                             <input type="radio" name=exterior-color id="exterior-color-10" value="custom-color-10" hidden>
                         </div>
-                        <button type="button" class="img button-right"></button>
+                        <button type="button" class="img button-right scroll-arrow hidden"></button>
                     </form>
                 </section>
             </main>
