--- a/login.html
+++ b/login.html
@@ -13,6 +13,7 @@
                 <input type="checkbox" id="burger-cb" tabindex="1">
                 
                 <ul class="row" id="nav-list">
+                    <li class="mobile-only"><a href="index.html"aria-haspopup="true">HOME</a></li>
                     <li>
                         <button aria-haspopup="true" class="no-button">MODELS</button>
                         <ul class="dropdown" aria-label="submenu">
