fixed press page

--- a/press.html
+++ b/press.html
@@ -59,44 +59,21 @@
                 <div class="first-4">
                 <div class="card-container-2">
                     <div class="card-2">
-                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
+                        <img src="pics/icons/no-photo.jpg" alt="photo">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                     </div>
                 </div>
                 <div class="card-container-2">
                     <div class="card-2">
-                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
+                        <img src="pics/icons/no-photo.jpg" alt="photo">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                     </div>
                 </div>
                 <div class="card-container-2">
                     <div class="card-2">
-                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-                    </div>
-                </div>
-                </div>
-                <div class="first-4">
-                <div class="card-container-2">
-                    <div class="card-2">
-                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-                    </div>
-                </div>
-                <div class="card-container-2">
-                    <div class="card-2">
-                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-                    </div>
-                </div>
-                <div class="card-container-2">
-                    <div class="card-2">
-                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
+                        <img src="pics/icons/no-photo.jpg" alt="photo">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                     </div>
@@ -105,21 +82,44 @@
                 <div class="first-4">
                 <div class="card-container-2">
                     <div class="card-2">
-                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
+                        <img src="pics/icons/no-photo.jpg" alt="photo">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                     </div>
                 </div>
                 <div class="card-container-2">
                     <div class="card-2">
-                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
+                        <img src="pics/icons/no-photo.jpg" alt="photo">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                     </div>
                 </div>
                 <div class="card-container-2">
                     <div class="card-2">
-                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
+                        <img src="pics/icons/no-photo.jpg" alt="photo">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                    </div>
+                </div>
+                </div>
+                <div class="first-4">
+                <div class="card-container-2">
+                    <div class="card-2">
+                        <img src="pics/icons/no-photo.jpg" alt="photo" >
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                    </div>
+                </div>
+                <div class="card-container-2">
+                    <div class="card-2">
+                        <img src="pics/icons/no-photo.jpg" alt="photo" >
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                    </div>
+                </div>
+                <div class="card-container-2">
+                    <div class="card-2">
+                        <img src="pics/icons/no-photo.jpg" alt="photo" >
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                     </div>
@@ -128,21 +128,21 @@
                 <div class="first-4">
                 <div class="card-container-2">
                     <div class="card-2">
-                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
+                        <img src="pics/icons/no-photo.jpg" alt="photo" >
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                     </div>
                 </div>
                 <div class="card-container-2">
                     <div class="card-2">
-                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
+                        <img src="pics/icons/no-photo.jpg" alt="photo" >
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                     </div>
                 </div>
                 <div class="card-container-2">
                     <div class="card-2">
-                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
+                        <img src="pics/icons/no-photo.jpg" alt="photo" >
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                     </div>
