Improved Customize page

--- a/customize.html
+++ b/customize.html
@@ -8,7 +8,7 @@
     <body id="customize">
         <div class="page-wrapper">
             <header class="row">
-                <a class="x-icon" href="index.html" title="x"></a>
+                <a class="x-icon img" href="index.html" title="x"></a>
                 <div class="logo-title col">
                     <a class="img" href="index.html" aria-label="company logo"></a>
                     <h1>TRION</h1> 
@@ -17,7 +17,9 @@
             </header>
             <main>
                 <div class="customization-exterior-car">
-                    <img src="pics/cars/7_25-Lux-Black-Nemesis_side-crop.png">
+                    <div class="wrapper">
+                        <img src="pics/cars/7_25-Lux-Black-Nemesis_side-crop.png">
+                    </div>
                 </div>
                 <section class="customization-nav col">
                     <nav class="customizor-type row">
