Fixed car glow and arrow buttons

--- a/customize.html
+++ b/customize.html
@@ -16,11 +16,11 @@
                 <a href="account.html" class="save">SAVE</a>
             </header>
             <main>
-                <div class="customization-exterior-car">
+                <section class="customization-exterior-car">
                     <div class="wrapper">
                         <img src="pics/cars/7_25-Lux-Black-Nemesis_side-crop.png">
                     </div>
-                </div>
+                </section>
                 <section class="customization-nav col">
                     <nav class="customizor-type row">
                         <button type="button" class="img button-left"></button>
@@ -40,7 +40,7 @@
                     </nav>
                     <form class="color-select">
                         <button type="button" class="img button-left scroll-arrow hidden"></button>
-                        <div class="content">
+                        <div class="content align-center">
                             <label for="exterior-color-1"></label>
                             <input type="radio" name=exterior-color id="exterior-color-1" value="custom-color-1" hidden>
                             <label for="exterior-color-2"></label>
