Made Garage responsive

--- a/account.html
+++ b/account.html
@@ -54,11 +54,13 @@
         </header>
         <main class="row">
             <nav class="settings-nav">
-                <ul>
-                    <li><a href="#">ACCOUNT SETTINGS</a></li>
-                    <li><a href="#" class="active">MY GARAGE</a></li>
-                    <li><a href="#">ORDER HISTORY</a></li>
-                </ul>
+                <div class="wrapper overflow-hidden">
+                    <ul>
+                        <li><a href="#">ACCOUNT SETTINGS</a></li>
+                        <li><a href="#" class="active">MY GARAGE</a></li>
+                        <li><a href="#">ORDER HISTORY</a></li>
+                    </ul>
+                </div>
             </nav>
             <div class="settings-content">
                 <section>
