--- a/contact-us.html
+++ b/contact-us.html
@@ -6,7 +6,7 @@
         <title>Contact Us | TRION</title>
         <link rel="icon" type="image/x-icon" href="pics/icons/trion-logo.png">
     </head>
-    <body>
+    <body id="contact-us">
         <header>
             <nav class="row">
                 <a class="navlogo img" href="index.html" aria-label="company logo"><h1>TRION</h1></a>
@@ -88,11 +88,44 @@
             <br>
             <p>123 Anywhere St., Any City, ST 12345</p>
             <br>
-            <p>hello@reallygreatsite.com</p>
+            <p>hello@<wbr>reallygreat<wbr>site.com</p>
         </div>
         </div>
         </main>
         <footer>
+            <div>
+                <li><a id="to-top" href="#">BACK TO TOP</a></li>
+            </div>
+            <div id="footer-main" class="row wrap">
+                <nav class="footer-nav">
+                    <ul class="col">
+                        <li><a href="account.html">ACCOUNT</a></li>
+                        <li><a href="#">MODELS</a></li>
+                        <li><a href="customize.html">CUSTOMIZATION</a></li>
+                        <li><a href="#">ABOUT US</a></li>
+                        <li><a href="press.html">PRESS</a></li>
+                        <li><a href="contact-us.html">CONTACT US</a></li>
+                        <li><a href="shop.html">STORE</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <ul class="row connections">
+                <li><a href=""><img src="pics/icons/facebook-icon.svg" alt="facebook"></a></li>
+                <li><a href=""><img src="pics/icons/instagram-icon.svg" alt="instagram"></a></li>
+                <li><a href=""><img src="pics/icons/linkedin-icon.svg" alt="linkedin"></a></li>
+                <li><a href=""><img src="pics/icons/youtube-icon.svg" alt="youtube"></a></li>
+                <li><a href=""><img src="pics/icons/tiktok-icon.svg" alt="tiktok"></a></li>
+                <li><a href=""><img src="pics/icons/x-icon.svg" alt="x"></a></li>
+                <li><a href=""><img src="pics/icons/twitch-icon.svg" alt="twitch"></a></li>
+            </ul>
+            <hr>
+                <div class="col" id="footer-foot">
+                    <ul class="row">
+                        <li><a href="">Privacy</a></li>
+                        <li><a href="">Terms</a></li>
+                    </ul>
+                    <p>© 2024-2025, Trion Supercars</p>
+                </div>
         </footer>
         <script src="script.js"></script>
     </body>
