--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
                 <article class="col justify-end align-center">
                     <h2 class="shaded">NEMESIS</h2>
                     <p>LUXURY. SPEED. SUSTAINABILITY.</p>
-                    <a href="#" class="button">MORE DETAILS</a>
+                    <a href="nemesis.html" class="button">MORE DETAILS</a>
                 </article>
             </div>
             <div class="hero parallax carousel_2">
                 <article class="col justify-end align-center">
                     <h2 class="shaded">BLACK WIDOW</h2>
                     <p>LUXURY. SPEED. SUSTAINABILITY.</p>
-                    <a href="#" class="button">MORE DETAILS</a>
+                    <a href="black-widow.html" class="button">MORE DETAILS</a>
                 </article>
             </div>
         </section>
