--- a/black-widow.html
+++ b/black-widow.html
@@ -55,18 +55,24 @@
         <section id="hero-black" class="parallax">
         </section>
         <main>
-
-            <section class="slanted img-right">
-                <img src="pics/cars/KS_config_hanger.jpg" alt="Trion Team">
-                <div class="text-wrapper col">
+            <div class="nemesis-orange">
+                <img src="pics/edit/blackwidow.png" alt="Trion supercar" width="2200px"></div>
+                <div class="nemesis-orange-text">
+                <h3><span>INTRODUCTION, </span><span> THE NEMESIS</span></h3>
+                        <p>Trion Supercars is set to lead the electric vehicle (EV) technology revolution by delivering high-performance Hyper Drive powertrain that achieve rapid acceleration and exceptional range while prioritizing sustainability through eco-friendly materials and manufacturing processes. With a commitment to innovation, Trion integrates cutting-edge smart technology and advanced battery systems, redefining the luxury EV experience for discerning auto enthusiasts.</p>
+                    </div>
+                    <div class="nemesis-orange">
+                <img src="pics/edit/red-widow.png" alt="Trion Team" width="2200px">
+            </div>
+             <div class="nemesis-orange-text">
                     <h3><span>THIS </span><span>IS THE </span><span>FUTURE</span></h3>
                     <p>Trion is redefining its future with the Black Widow supercar, a groundbreaking leap in automotive innovation. This high-performance vehicle showcases Trion's commitment to cutting-edge technology, luxury, and sustainability, pushing over 1400  horsepower with advanced axial flux electric motors. The Black Widow combines sleek aerodynamic design with an all-electric powertrain, reflecting Trion's vision of where high-performance meets environmental responsibility. More than just a supercar, it represents the company's bold ambition to lead the next generation of electric vehicles, blending power, precision, and eco-conscious engineering to set a new standard in luxury performance.</p>
                     <a href="#" class="button">LEARN MORE</a>
                 </div>
-            </section>
+           
     
             <section class="slanted img">
-                <img src="pics/cars/nemesis-e-blue-back-1024x537.jpg" alt="Trion Team">
+                <img src="pics/edit/track-car.png" alt="Trion Team">
                 <div class="text-wrapper col">
                     <h3><span>MADE FOR </span><span> THE TRACK</span></h3>
                     <p>The 1400hp Hyper Drive Unit powered by Shango Technologies puts unparalleled electrical power right at your fingertips on the steering wheel, offering instant responsiveness and precise control. This cutting-edge system will be integrated into the first-ever all-electric muscle race car, marking a revolutionary step in automotive performance. With its groundbreaking power and engineering, the Hyper Drive Unit not only delivers extreme horsepower but also sets a new benchmark for what’s possible in electric muscle cars, redefining speed and performance for the future of racing.</p>
