--- a/nemesis.html
+++ b/nemesis.html
@@ -55,7 +55,12 @@
         <section id="hero-nemesis" class="parallax">
         </section>
         <main>
-
+        <div class="nemesis-orange">
+        <img src="pics/edit/trionorangesupercars3.png" alt="Trion supercar" width="2200px"></div>
+        <div class="nemesis-orange-text">
+        <h3><span>INTRODUCTION, </span><span> THE NEMESIS</span></h3>
+                <p>Trion Supercars is set to lead the electric vehicle (EV) technology revolution by delivering high-performance Hyper Drive powertrain that achieve rapid acceleration and exceptional range while prioritizing sustainability through eco-friendly materials and manufacturing processes. With a commitment to innovation, Trion integrates cutting-edge smart technology and advanced battery systems, redefining the luxury EV experience for discerning auto enthusiasts.</p>
+            </div>
         <section class="slanted img-right">
             <img src="pics/cars/Nemesis_Interior_render3-1024x458.jpg" alt="Trion Team">
             <div class="text-wrapper col">
