--- a/contact-us.html
+++ b/contact-us.html
@@ -55,7 +55,7 @@
         <main>
             <div class="h2-contact"><h2>CONTACT US</h2></div>
             <div class="contact-us-main">
-                <section id="footer-contact">
+                <section class="contact-form">
                     <form class="row wrap">
                         <div>
                             <label for="f-name">FIRST NAME</label>
@@ -77,7 +77,7 @@
                             <label for="message">MESSAGE*</label>
                             <textarea id="message" placeholder="MESSAGE" required></textarea>
                         </div>
-                        <button type="submit" class="button">SUBMIT</button>                  
+                        <button type="submit" class="button contact-submit">SUBMIT</button>                  
                     </form>
                 </section>
         
@@ -88,7 +88,7 @@
             <br>
             <p>123 Anywhere St., Any City, ST 12345</p>
             <br>
-            <p>hello@<wbr>reallygreat<wbr>site.com</p>
+            <p>hello@<wbr>definitely<wbr>trion.com</p>
         </div>
         </div>
         </main>
