--- a/login.html
+++ b/login.html
@@ -54,7 +54,7 @@
         <main>
             <div class="h2-contact"><h2>TRION LOGIN</h2></div>
             <div class="contact-us-main">
-                <section id="footer-contact">
+                <section class="contact-form">
                     <form class="row wrap">
                         <div>
                             <label for="f-name">FIRST NAME</label>
@@ -76,7 +76,7 @@
                             <label for="message">MESSAGE*</label>
                             <textarea id="message" placeholder="MESSAGE" required></textarea>
                         </div>
-                        <button type="submit" class="button">SUBMIT</button>                  
+                        <button type="submit" class="button contact-submit">SUBMIT</button>                  
                     </form>
                 </section>
         </div>
