--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         <li><a href="shop.html">STORE</a></li>
                     </ul>
                 </nav>
-                <section id="footer-contact">
+                <section class="contact-form">
                     <h3>CONTACT US</h3>
                     <form class="row wrap">
                         <div>
@@ -139,7 +139,7 @@
                             <label for="message">MESSAGE*</label>
                             <textarea id="message" placeholder="MESSAGE" required></textarea>
                         </div>
-                        <button type="submit" class="button">SUBMIT</button>
+                        <button type="submit" class="button contact-submit">SUBMIT</button>
                     </form>
                 </section>
             </div>
