thanks, contact-us

--- a/nemesis.html
+++ b/nemesis.html
@@ -3,7 +3,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="app.css">
-        <title>Press | TRION</title>
+        <title>Nemesis | TRION</title>
         <link rel="icon" type="image/x-icon" href="pics/icons/trion-logo.png">
     </head>
     <body>
@@ -18,7 +18,7 @@
                     <li>
                         <button aria-haspopup="true" class="no-button">MODELS</button>
                         <ul class="dropdown" aria-label="submenu">
-                            <li><a href="nemesis.html">NEMESIS</a></li>
+                            <li><a href="nemesis.html" class="active">NEMESIS</a></li>
                             <li><a href="black-widow.html">BLACK WIDOW</a></li>
                         </ul>
                     </li>
