--- a/press.html
+++ b/press.html
@@ -26,7 +26,7 @@
                         <button aria-haspopup="true" class="no-button">ABOUT US</button>
                         <ul class="dropdown" aria-label="submenu">
                             <li><a href="our-story.html">OUR STORY</a></li>
-                            <li><a href="press.html">PRESS</a></li>
+                            <li><a href="press.html" class="active">PRESS</a></li>
                             <li><a href="contact-us.html">CONTACT US</a></li>
                         </ul>
                     </li>
