--- a/contact-us.html
+++ b/contact-us.html
@@ -27,7 +27,7 @@
                         <ul class="dropdown" aria-label="submenu">
                             <li><a href="our-story.html">OUR STORY</a></li>
                             <li><a href="press.html">PRESS</a></li>
-                            <li><a href="contact-us.html">CONTACT US</a></li>
+                            <li><a href="contact-us.html" class="active">CONTACT US</a></li>
                         </ul>
                     </li>
                     <li>
@@ -84,14 +84,18 @@
                 <article class="contact-info">
                     <p>For questions, technical assistance, or collaboration opportunities via the contact information provided.</p>
                     <br>
-                    <img src="pics/icons/phone-icon.svg" alt="Phone icon">
-                    <p>(123) 456-7890</p>
-                    <br>
-                    <img src="pics/icons/location-icon.svg" alt="Location marker">
-                    <p>123 Anywhere St., Any City, ST 12345</p>
-                    <br>
-                    <img src="pics/icons/mail-icon.svg" alt="Mail icon">
-                    <p>hello@<wbr>definitely<wbr>trion.com</p>
+                    <div class="text-wrapper row">
+                        <img src="pics/icons/phone-icon.svg" alt="Phone icon">
+                        <p>(123) 456-7890</p>
+                    </div>
+                    <div class="text-wrapper row">
+                        <img src="pics/icons/location-icon.svg" alt="Location marker">
+                        <p>123 Anywhere St., Any City, ST 12345</p>
+                    </div>
+                    <div class="text-wrapper row">
+                        <img src="pics/icons/mail-icon.svg" alt="Mail icon">
+                        <p>hello@<wbr>definitely<wbr>trion.com</p>
+                    </div>
                 </article>
             </div>
         </main>
