--- a/customize.html
+++ b/customize.html
@@ -3,7 +3,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="app.css">
-        <title>Document</title>
+        <title>Customize | TRION</title>
+        <link rel="icon" type="image/x-icon" href="pics/icons/trion-logo.png">
     </head>
     <body id="customize">
         <div class="page-wrapper">
