--- a/our-story.html
+++ b/our-story.html
@@ -25,7 +25,7 @@
                     <li>
                         <button aria-haspopup="true" class="no-button">ABOUT US</button>
                         <ul class="dropdown" aria-label="submenu">
-                            <li><a href="our-story.html">OUR STORY</a></li>
+                            <li><a href="our-story.html" class="active">OUR STORY</a></li>
                             <li><a href="press.html">PRESS</a></li>
                             <li><a href="contact-us.html">CONTACT US</a></li>
                         </ul>
