--- a/shop.html
+++ b/shop.html
@@ -3,7 +3,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="app.css">
-        <title>Press | TRION</title>
+        <title>Shop | TRION</title>
         <link rel="icon" type="image/x-icon" href="pics/icons/trion-logo.png">
     </head>
     <body>
@@ -37,7 +37,7 @@
                             <li><a href="customize.html">BLACK WIDOW</a></li>
                         </ul> 
                     </li>
-                    <li><a href="shop.html"aria-haspopup="true">SHOP</a></li>
+                    <li><a href="shop.html" aria-haspopup="true" class="active">SHOP</a></li>
                 </ul>
                 <div class="row">
                     <a class="navcart img" href="cart.html" title="cart"></a>
