Fixed cars headers

--- a/nemesis.html
+++ b/nemesis.html
@@ -52,7 +52,14 @@
                 </div>
             </nav>
         </header>
-        <section id="hero-nemesis" class="parallax">
+        <section role="hero" id="hero-nemesis" class="row parallax">
+            <div class="hero parallax">
+                <article class="col justify-end align-center">
+                    <h2 class="shaded">NEMESIS</h2>
+                    <p>LUXURY. SPEED. SUSTAINABILITY.</p>
+                    <a href="customize.html" class="button">CUSTOMIZE</a>
+                </article>
+            </div>
         </section>
         <main>
         <div class="nemesis-orange">
