--- a/nemesis.html
+++ b/nemesis.html
@@ -62,29 +62,30 @@
             </div>
         </section>
         <main>
-        <div class="nemesis-orange">
-        <img src="pics/edit/trionorangesupercars3.png" alt="Trion supercar" width="2200px"></div>
-        <div class="nemesis-orange-text">
-        <h3><span>INTRODUCTION, </span><span> THE NEMESIS</span></h3>
-                <p>Trion Supercars is set to lead the electric vehicle (EV) technology revolution by delivering high-performance Hyper Drive powertrain that achieve rapid acceleration and exceptional range while prioritizing sustainability through eco-friendly materials and manufacturing processes. With a commitment to innovation, Trion integrates cutting-edge smart technology and advanced battery systems, redefining the luxury EV experience for discerning auto enthusiasts.</p>
-            </div>
-        <section class="slanted img-right">
-            <img src="pics/cars/Nemesis_Interior_render3-1024x458.jpg" alt="Trion Team">
-            <div class="text-wrapper col">
-                <h3><span>NEMESIS </span><span>INTERIOR</span></h3>
-                <p>The Trion Nemesis interior is designed with a focus on luxury and cutting-edge technology, offering a fully digital cockpit that provides drivers with real-time vehicle data and controls. Crafted with premium materials and customizable options, the Nemesis interior delivers both comfort and a futuristic driving experience.</p>
-                <a href="#" class="button">LEARN MORE</a>
-            </div>
-        </section>
+            <section class="full col img shadow-top-bottom nemesis-orange">
+                <div class="text-wrapper shaded">
+                    <h3><span>INTRODUCTION, </span><span> THE NEMESIS</span></h3>
+                    <p>Trion Supercars is set to lead the electric vehicle (EV) technology revolution by delivering high-performance Hyper Drive powertrain that achieve rapid acceleration and exceptional range while prioritizing sustainability through eco-friendly materials and manufacturing processes. With a commitment to innovation, Trion integrates cutting-edge smart technology and advanced battery systems, redefining the luxury EV experience for discerning auto enthusiasts.</p>
+                </div>
+            </section>
+            <section class="slanted img-right">
+                <img src="pics/cars/Nemesis_Interior_render3-1024x458.jpg" alt="Trion Team">
+                <div class="text-wrapper col">
+                    <h3><span>NEMESIS </span><span>INTERIOR</span></h3>
+                    <p>The Trion Nemesis interior is designed with a focus on luxury and cutting-edge technology, offering a fully digital cockpit that provides drivers with real-time vehicle data and controls. Crafted with premium materials and customizable options, the Nemesis interior delivers both comfort and a futuristic driving experience.</p>
+                    <a href="#" class="button">LEARN MORE</a>
+                </div>
+            </section>
 
-        <section class="slanted img">
-            <img src="pics/cars/Nemesis_Interior_render1-1024x575.jpg" alt="Trion Team">
-            <div class="text-wrapper col">
-                <h3><span>INTRODUCTION, </span><span> THE NEMESIS</span></h3>
-                <p>Trion Supercars is set to lead the electric vehicle (EV) technology revolution by delivering high-performance Hyper Drive powertrain that achieve rapid acceleration and exceptional range while prioritizing sustainability through eco-friendly materials and manufacturing processes. With a commitment to innovation, Trion integrates cutting-edge smart technology and advanced battery systems, redefining the luxury EV experience for discerning auto enthusiasts.</p>
-                <a href="#" class="button">LEARN MORE</a>
-            </div>
-        </section>
+            <section class="slanted img">
+                <img src="pics/cars/Nemesis_Interior_render1-1024x575.jpg" alt="Trion Team">
+                <div class="text-wrapper col">
+                    <h3><span>NEMESIS </span><span>  EXTERIOR</span></h3>
+                    <p>Innovating Electric Transportation
+                        Collaborating with our team and technical schools to bring this vision to life.</p>
+                    <a href="customize.html" class="button">Customize</a>
+                </div>
+            </section>
         </main>
         <footer>
             <div>
