Temp fixes for presentation

--- a/cart.html
+++ b/cart.html
@@ -52,9 +52,7 @@
                 </div>
             </nav>
         </header>
-        <br><br><br><br><br><br><br><br><br><br>
-        <p>WORK IN PROGRESS</p>
-        <br><br><br><br><br><br>
+        <p class="wip-msg">Under construction, please come back later!</p>
         <footer>
             <div>
                 <li><a id="to-top" href="#">BACK TO TOP</a></li>
