--- a/press.html
+++ b/press.html
@@ -56,7 +56,7 @@
         </section>
         <main>
             <div class="card-grid-2">
-                <div class="first-4">
+                <div class="first-4 wrap">
                 <div class="card-container-2">
                     <div class="card-2">
                         
@@ -77,8 +77,6 @@
                         <a href="https://www.yahoo.com/tech/fresno-co-students-learn-supercars-004004466.html">YAHOO TECH NEWS - LEARN MORE</a>
                     </div>
                 </div>
-                </div>
-                <div class="first-4">
                 <div class="card-container-2">
                     <div class="card-2">
                         <img src="pics/edit/trionsupercarsofficial.png" alt="photo">
