--- a/shop.html
+++ b/shop.html
@@ -53,7 +53,8 @@
             </nav>
         </header>
         <main>
-            <div class="card-grid-2">
+            <p class="wip-msg">Under construction, please come back later!</p>
+            <!-- <div class="card-grid-2">
                 <div class="first-4">
                 <div class="card-container-2">
                     <div class="card-2">
@@ -146,7 +147,7 @@
                     </div>
                     </div>
                 </div>
-            </div>    
+            </div>     -->
         </main>
         <footer>
             <div>
