--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <h3><span>CUSTOMER </span><span>CENTERED </span><span>DESIGN</span></h3>
                     <p>Innovating Electric Transportation
                         Collaborating with our team and technical schools to bring this vision to life.</p>
-                    <a href="#" class="button">LEARN MORE</a>
+                    <a href="our-story.html" class="button">LEARN MORE</a>
                 </div>
             </section>
         </main>
@@ -108,9 +108,9 @@
                 <nav class="footer-nav">
                     <ul class="col">
                         <li><a href="account.html">ACCOUNT</a></li>
-                        <li><a href="#">MODELS</a></li>
+                        <li><a href="nemesis.html">MODELS</a></li>
                         <li><a href="customize.html">CUSTOMIZATION</a></li>
-                        <li><a href="#">ABOUT US</a></li>
+                        <li><a href="our-story.html">ABOUT US</a></li>
                         <li><a href="press.html">PRESS</a></li>
                         <li><a href="contact-us.html">CONTACT US</a></li>
                         <li><a href="shop.html">STORE</a></li>
