validated html+css, adjusted garage

--- a/customize.html
+++ b/customize.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -19,13 +20,13 @@
             <main>
                 <section class="customization-exterior-car">
                     <div class="wrapper">
-                        <img src="pics/cars/7_25-Lux-Black-Nemesis_side-crop.png">
+                        <img src="pics/cars/7_25-Lux-Black-Nemesis_side-crop.png" alt="Custom car">
                     </div>
                 </section>
                 <section class="customization-nav col">
                     <nav class="customizor-type row">
                         <button type="button" class="img button-left"></button>
-                        <h2 value="exterior-color">EXTERIOR</h2>
+                        <h2>EXTERIOR</h2>
                         <button type="button" class="img button-right"></button>
                     </nav>
                     <nav class="customizor-nav-secondary row">
@@ -70,7 +71,7 @@
         </div>
         <footer>
             <div>
-                <li><a id="to-top" href="#">BACK TO TOP</a></li>
+                <a id="to-top" href="#">BACK TO TOP</a>
             </div>
             <div id="footer-main" class="row wrap">
                 <nav class="footer-nav">
@@ -129,7 +130,6 @@
                     <p>© 2024-2025, Trion Supercars</p>
                 </div>
         </footer>
-    </div>
     <script src="script.js"></script>
     </body>
 </html>
