--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -14,7 +15,7 @@
                 <input type="checkbox" id="burger-cb" tabindex="0">
                 
                 <ul class="row" id="nav-list">
-                    <li class="mobile-only"><a href="index.html"aria-haspopup="true">HOME</a></li>
+                    <li class="mobile-only"><a href="index.html" aria-haspopup="true">HOME</a></li>
                     <li>
                         <button aria-haspopup="true" class="no-button">MODELS</button>
                         <ul class="dropdown" aria-label="submenu">
@@ -37,7 +38,7 @@
                             <li><a href="customize.html">BLACK WIDOW</a></li>
                         </ul> 
                     </li>
-                    <li><a href="shop.html"aria-haspopup="true">SHOP</a></li>
+                    <li><a href="shop.html" aria-haspopup="true">SHOP</a></li>
                 </ul>
                 <div class="row">
                     <a class="navcart img" href="cart.html" title="cart"></a>
@@ -52,22 +53,22 @@
                 </div>
             </nav>
         </header>
-        <section role="hero" class="row carousel-container">
-            <div class="hero parallax carousel_2">
+        <div class="row carousel-container hero-container">
+            <section class="hero parallax carousel_2">
                 <article class="col justify-end align-center">
                     <h2 class="shaded">NEMESIS</h2>
                     <p>LUXURY. SPEED. SUSTAINABILITY.</p>
                     <a href="nemesis.html" class="button">MORE DETAILS</a>
                 </article>
-            </div>
-            <div class="hero parallax carousel_2">
+            </section>
+            <section class="hero parallax carousel_2">
                 <article class="col justify-end align-center">
                     <h2 class="shaded">BLACK WIDOW</h2>
                     <p>LUXURY. SPEED. SUSTAINABILITY.</p>
                     <a href="black-widow.html" class="button">MORE DETAILS</a>
                 </article>
-            </div>
-        </section>
+            </section>
+        </div>
         <main>
             <section class="full col img shadow-top-bottom">
                 <div class="text-wrapper shaded">
@@ -102,7 +103,7 @@
         </main>
         <footer>
             <div>
-                <li><a id="to-top" href="#">BACK TO TOP</a></li>
+                <a id="to-top" href="#">BACK TO TOP</a>
             </div>
             <div id="footer-main" class="row wrap">
                 <nav class="footer-nav">
