--- a/shop.html
+++ b/shop.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -14,7 +15,7 @@
                 <input type="checkbox" id="burger-cb" tabindex="0">
                 
                 <ul class="row" id="nav-list">
-                    <li class="mobile-only"><a href="index.html"aria-haspopup="true">HOME</a></li>
+                    <li class="mobile-only"><a href="index.html" aria-haspopup="true">HOME</a></li>
                     <li>
                         <button aria-haspopup="true" class="no-button">MODELS</button>
                         <ul class="dropdown" aria-label="submenu">
@@ -53,105 +54,11 @@
             </nav>
         </header>
         <main>
-            <p class="wip-msg">Under construction, please come back later!</p>
-            <!-- <div class="card-grid-2">
-                <div class="first-4">
-                <div class="card-container-2">
-                    <div class="card-2">
-                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-                    </div>
-                </div>
-                <div class="card-container-2">
-                    <div class="card-2">
-                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-                    </div>
-                </div>
-                <div class="card-container-2">
-                    <div class="card-2">
-                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-                    </div>
-                </div>
-                </div>
-                <div class="first-4">
-                <div class="card-container-2">
-                    <div class="card-2">
-                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-                    </div>
-                </div>
-                <div class="card-container-2">
-                    <div class="card-2">
-                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-                    </div>
-                </div>
-                <div class="card-container-2">
-                    <div class="card-2">
-                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-                    </div>
-                </div>
-                </div>
-                <div class="first-4">
-                <div class="card-container-2">
-                    <div class="card-2">
-                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-                    </div>
-                </div>
-                <div class="card-container-2">
-                    <div class="card-2">
-                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-                    </div>
-                </div>
-                <div class="card-container-2">
-                    <div class="card-2">
-                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-                    </div>
-                    </div>
-                </div>
-                <div class="first-4">
-                <div class="card-container-2">
-                    <div class="card-2">
-                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-                    </div>
-                </div>
-                <div class="card-container-2">
-                    <div class="card-2">
-                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-                    </div>
-                </div>
-                <div class="card-container-2">
-                    <div class="card-2">
-                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-                    </div>
-                    </div>
-                </div>
-            </div>     -->
+           <section class="shop-container"></section>
         </main>
         <footer>
             <div>
-                <li><a id="to-top" href="#">BACK TO TOP</a></li>
+                <a id="to-top" href="#">BACK TO TOP</a>
             </div>
             <div id="footer-main" class="row wrap">
                 <nav class="footer-nav">
