--- a/account.html
+++ b/account.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -14,7 +15,7 @@
                 <input type="checkbox" id="burger-cb" tabindex="0">
                 
                 <ul class="row" id="nav-list">
-                    <li class="mobile-only"><a href="index.html"aria-haspopup="true">HOME</a></li>
+                    <li class="mobile-only"><a href="index.html" aria-haspopup="true">HOME</a></li>
                     <li>
                         <button aria-haspopup="true" class="no-button">MODELS</button>
                         <ul class="dropdown" aria-label="submenu">
@@ -37,7 +38,7 @@
                             <li><a href="customize.html">BLACK WIDOW</a></li>
                         </ul> 
                     </li>
-                    <li><a href="shop.html"aria-haspopup="true">SHOP</a></li>
+                    <li><a href="shop.html" aria-haspopup="true">SHOP</a></li>
                 </ul>
                 <div class="row">
                     <a class="navcart img" href="cart.html" title="cart"></a>
@@ -63,13 +64,15 @@
                 </div>
             </nav>
             <div class="settings-content">
-                <section>
+                <!-- <section>
 
-                </section>
-                <section id="garage">
-                    <article class="custom-car">
+                </section> -->
+                <section id="garage" class="col align-center">
+                    <h2>Garage</h2>
+                    <article class="custom-car col text-center">
+                        <h3>Nemesis</h3>
                         <div class="customization-exterior-car">
-                            <img src="pics/cars/7_25-Lux-Black-Nemesis_side-crop.png">
+                            <img src="pics/cars/7_25-Lux-Black-Nemesis_side-crop.png" alt="Customized car">
                         </div>
                         <div class="row justify-around">
                             <a href="customize.html" class="button">CUSTOMIZE</a>
@@ -77,14 +80,14 @@
                         </div>
                     </article>
                 </section>
-                <section>
+                <!-- <section>
                     
-                </section>
+                </section> -->
             </div>
         </main>
         <footer>
             <div>
-                <li><a id="to-top" href="#">BACK TO TOP</a></li>
+                <a id="to-top" href="#">BACK TO TOP</a>
             </div>
             <div id="footer-main" class="row wrap">
                 <nav class="footer-nav">
