--- a/black-widow.html
+++ b/black-widow.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -14,7 +15,7 @@
                 <input type="checkbox" id="burger-cb" tabindex="0">
                 
                 <ul class="row" id="nav-list">
-                    <li class="mobile-only"><a href="index.html"aria-haspopup="true">HOME</a></li>
+                    <li class="mobile-only"><a href="index.html" aria-haspopup="true">HOME</a></li>
                     <li>
                         <button aria-haspopup="true" class="no-button">MODELS</button>
                         <ul class="dropdown" aria-label="submenu">
@@ -37,7 +38,7 @@
                             <li><a href="customize.html">BLACK WIDOW</a></li>
                         </ul> 
                     </li>
-                    <li><a href="shop.html"aria-haspopup="true">SHOP</a></li>
+                    <li><a href="shop.html" aria-haspopup="true">SHOP</a></li>
                 </ul>
                 <div class="row">
                     <a class="navcart img" href="cart.html" title="cart"></a>
@@ -52,7 +53,7 @@
                 </div>
             </nav>
         </header>
-        <section role="hero" id="hero-black" class="row parallax">
+        <section id="hero-black" class="hero-container row parallax">
             <div class="hero parallax">
                 <article class="col justify-end align-center">
                     <h2 class="shaded">BLACK WIDOW</h2>
@@ -85,7 +86,7 @@
         </main>
         <footer>
             <div>
-                <li><a id="to-top" href="#">BACK TO TOP</a></li>
+                <a id="to-top" href="#">BACK TO TOP</a>
             </div>
             <div id="footer-main" class="row wrap">
                 <nav class="footer-nav">
